--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 type="text"
                 name="amount"
                 id="amount"
-                placeholder="0,00"
+                placeholder="R$ 0,00"
                 required
               />
             </fieldset>
@@ -72,7 +72,8 @@
           </header>
 
           <ul>
-            <li class="expense">
+            <!-- Exemplo da estrutura HTML de um item de despesa -->
+            <!-- <li class="expense">
               <img src="./img/food.svg" alt="Ícone de tipo da despesa" />
 
               <div class="expense-info">
@@ -83,10 +84,13 @@
               <span class="expense-amount"><small>R$</small>1.420,57</span>
 
               <img src="./img/remove.svg" alt="remover" class="remove-icon" />
-            </li>
+            </li> -->
+            <!-- Fim do exemplo -->
           </ul>
         </aside>
       </section>
     </main>
+
+    <script src="scripts/script.js"></script>
   </body>
 </html>
